--- a/styles/inputs.scss
+++ b/styles/inputs.scss
@@ -1,6 +1,6 @@
 @layer components {
   .input {
-    @apply mr-2 rounded-md px-3 py-2;
+    @apply mr-2 rounded-md bg-zinc-50 px-3 py-2 dark:bg-zinc-800;
   }
   .input-container {
     @apply flex flex-col;
